Fix: Body overflow. Feature: Scroll to top

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -26,6 +26,7 @@ time, mark, audio, video {
 
 html {
 	height: 100%;
+	overflow: scroll;
 }
 
 body {
